refactor, add some helper interfaces, build task form

--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -4,7 +4,7 @@
       <mat-card-subtitle>{{task.status}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-        <p>{{task.assignee}}</p>
+        <p>{{task.assignee?.name}}</p>
         <p>{{task.effort}}</p>
     </mat-card-content>
     <mat-card-actions>
