Created new models and restructed pre-existing ones to match backend schema. Added htmlhintrc to get rid of needless errors.

--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header>
         <mat-card-title>
-            {{task.name}}
+            {{task.card_title}}
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
