--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
@@ -1,4 +1,4 @@
-<h3 mat-dialog-title>Create new task</h3>
+<h3 mat-dialog-title>Create New Task</h3>
 <mat-dialog-content>
     <form [formGroup]="taskForm">
         <mat-form-field class="basic-input">
