--- a/you-kan.UI/ClientApp/src/app/dashboard-action-bar/dashboard-action-bar.component.css
+++ b/you-kan.UI/ClientApp/src/app/dashboard-action-bar/dashboard-action-bar.component.css
@@ -2,9 +2,7 @@
     padding-left: 25px;
     padding-top: 10px;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
     align-items: stretch;
     gap: 40px;
-    margin: 15px;
+    margin-top: 15px;
   }
