--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,23 +1,45 @@
-<mat-toolbar class="toolbar" color="accent">
+<mat-toolbar class="toolbar" color="primary">
     <mat-toolbar-row>
         <h4>YOU-KAN  - toolbar -</h4>
+        <div class="toolbar-actions">
+            <button mat-mini-fab (click)="openUserDetail()">
+                <mat-icon>account_circle</mat-icon>
+            </button>
+            <button mat-icon-button (click)="logout()">
+                <mat-icon>logout</mat-icon>
+            </button>
+        </div>
     </mat-toolbar-row>
 </mat-toolbar>
 <div class="app-container">
-    <mat-sidenav-container class="full-height-container">
+    <mat-sidenav-container>
         <!-- Left sidenav -->
         <mat-sidenav mode="side" opened class="side-nav-detail">
-            <p>SIDE NAVIGATION</p>
+            <mat-nav-list>
+                  <a mat-list-item href="...">Projects</a>
+                  <a mat-list-item href="...">Users</a>
+              </mat-nav-list>
         </mat-sidenav>
 
         <mat-sidenav-content>
             <app-dashboard-action-bar></app-dashboard-action-bar>
-            <div class="column-wrapper">
-                <app-column></app-column>
-                <app-column></app-column>
-                <app-column></app-column>
-                <app-column></app-column>
-                <app-column></app-column>
+            <div class="board-wrapper">
+                <div cdkDropListGroup class="status-columns">
+                    @for (taskList of allTasks; track taskList) {
+                        <app-column
+                        cdkDropList
+                        #todoList="cdkDropList"
+                        [cdkDropListData]="taskList"
+                        [title] = "taskList.status"
+                        (cdkDropListDropped)="drop($event)" 
+                        class="column">
+                        @for (task of taskList.tasks; track task) {
+                            <p>TEST</p>
+                            <app-task-card></app-task-card>
+                        }
+                    </app-column>
+                    }
+                </div>
             </div>
         </mat-sidenav-content>
     </mat-sidenav-container>
