--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -1,11 +1,11 @@
 <mat-card class="card-style" appearance="outlined">
     <mat-card-header>
-      <mat-card-title>{{testTask.name}}</mat-card-title>
-      <mat-card-subtitle>Status: {{testTask.status}}</mat-card-subtitle>
+      <mat-card-title>Task name</mat-card-title>
+      <mat-card-subtitle>Status: Developing</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-        <p>Assignee: {{testTask.assignee}}</p>
-        <p>Effort: {{testTask.effort}}</p>
+        <p>Assignee: Test</p>
+        <p>Effort: 3</p>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>Details</button>
