Added html to project list

--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
@@ -1,1 +1,5 @@
-<p>project-list works!</p>
+<section class="hero is-info is-bold">
+    <div class="hero-body">
+      <p class="title">Project List</p>
+    </div>
+  </section>
