--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
@@ -2,4 +2,7 @@
     <div class="hero-body">
       <p class="title">Project List</p>
     </div>
+    <p>Project 1</p>
+    <p>Project 2</p>
+    <p>Project 3</p>
   </section>
