--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -1,7 +1,6 @@
-<mat-card class="card-style" appearance="outlined">
+<mat-card cdkDrag class="card-style" appearance="outlined">
     <mat-card-header>
-      <mat-card-title>Task name</mat-card-title>
-      <mat-card-subtitle>Status: Developing</mat-card-subtitle>
+      <mat-card-title>{{task.name}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <p>Assignee: Test</p>
