--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar" color="primary">
     <mat-toolbar-row>
-        <h4>YOU-KAN - toolbar -</h4>
+        <h4>YOU-KAN</h4>
         <div class="toolbar-actions">
             <button mat-mini-fab (click)="openUserDetail()">
                 <mat-icon>account_circle</mat-icon>
@@ -11,7 +11,7 @@
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
-<div class="app-container">
+<div class="app-container" style="width:100%">
     <mat-sidenav-container>
         <!-- Left sidenav -->
         <mat-sidenav mode="side" opened class="side-nav-detail">
@@ -38,5 +38,6 @@
                 </div>
             </div>
         </mat-sidenav-content>
+
     </mat-sidenav-container>
 </div>
