--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -1,10 +1,10 @@
 <mat-card cdkDrag class="card-style" appearance="outlined">
     <mat-card-header>
-      <mat-card-title>{{task.name}}</mat-card-title>
+      <mat-card-title>{{ task.name }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <p>Assignee: Test</p>
-        <p>Effort: 3</p>
+        <p>Assignee: {{ task.assignee }}</p>
+        <p>Effort: {{ task.effort }}</p>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>Details</button>
