submitting new task form adds task to board

--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -25,7 +25,10 @@
 
         <!-- Main page content -->
         <mat-sidenav-content style="width:100%">
-            <app-dashboard-action-bar (projectChanged)="handleProjectChange($event)" (dashboardFiltersChanged)="handleFiltersChange($event)"></app-dashboard-action-bar>
+            <app-dashboard-action-bar 
+            (projectChanged)="handleProjectChange($event)" 
+            (dashboardFiltersChanged)="handleFiltersChange($event)"
+            (taskCreated)="handleTaskCreated($event)"></app-dashboard-action-bar>
             <div class="board-wrapper">
                 <div cdkDropListGroup class="status-columns">
                     @for (statusList of allTasksByStatus(); track statusList.status) {
