--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
@@ -1,61 +1,72 @@
 <div>
-<h3 mat-dialog-title>Create New Task</h3>
-<mat-dialog-content>
-    <form [formGroup]="taskForm">
-        <mat-form-field class="basic-input">
-            <mat-label>Name</mat-label>
-            <input matInput formControlName="name" />
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Type</mat-label>
-            <mat-select formControlName="type">
-                @for (taskType of taskTypes; track taskType) {
-                <mat-option [value]="taskType">{{taskType}}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Priority</mat-label>
-            <mat-select formControlName="priority">
-                @for (priority of priorities; track priority) {
-                <mat-option [value]="priority">{{priority}}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Status</mat-label>
-            <mat-select formControlName="status">
-                @for (status of taskStatuses; track status) {
-                <mat-option [value]="status">{{status}}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Assignee</mat-label>
-            <input matInput formControlName="assignee" />
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Effort</mat-label>
-            <mat-select formControlName="effort">
-                <mat-option>1</mat-option>
-                <mat-option>2</mat-option>
-                <mat-option>3</mat-option>
-                <mat-option>4</mat-option>
-                <mat-option>5</mat-option>
-        </mat-select>
-        </mat-form-field>
-        <mat-form-field class="desc-input">
-            <mat-label>Description</mat-label>
-            <textarea matInput
-            formControlName="description"
-            cdkTextareaAutosize
-            #autosize="cdkTextareaAutosize"
-            cdkAutosizeMinRows="1"
-            cdkAutosizeMaxRows="3"></textarea>
-        </mat-form-field>
-    </form>
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button (click)="cancel()">Cancel</button>
-    <button mat-button cdkFocusInitial (click)="submit()">Create</button>
-</mat-dialog-actions>
+    <h3 mat-dialog-title>Create New Task</h3>
+    <mat-dialog-content>
+        <form [formGroup]="taskForm">
+            <mat-form-field class="basic-input">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="name" />
+            </mat-form-field>
+            <mat-form-field class="desc-input">
+                <mat-label>Description</mat-label>
+                <textarea matInput formControlName="description" cdkTextareaAutosize #autosize="cdkTextareaAutosize"
+                    cdkAutosizeMinRows="1" cdkAutosizeMaxRows="3"></textarea>
+            </mat-form-field>
+            <mat-form-field class="basic-input">
+                <mat-label>Type</mat-label>
+                <mat-select formControlName="type">
+                    @for (taskType of taskTypes; track taskType) {
+                    <mat-option [value]="taskType">{{taskType}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="basic-input">
+                <mat-label>Sprint</mat-label>
+                <mat-select formControlName="sprint">
+                    <mat-option [value]="null">---</mat-option>
+                    @for (sprint of sprints; track sprint.id ) {
+                    <mat-option [value]="sprint.id">{{sprint.name}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="basic-input">
+                <mat-label>Priority</mat-label>
+                <mat-select formControlName="priority">
+                    @for (priority of priorities; track priority) {
+                    <mat-option [value]="priority">{{priority}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="basic-input">
+                <mat-label>Status</mat-label>
+                <mat-select formControlName="status">
+                    @for (status of taskStatuses; track status) {
+                    <mat-option [value]="status">{{status}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="basic-input">
+                <mat-label>Assignee</mat-label>
+                <mat-select formControlName="assignee">
+                    <mat-option [value]="null">---</mat-option>
+                    @for (assignee of assignees; track assignee.id ) {
+                    <mat-option [value]="assignee.id">{{assignee.name}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="basic-input">
+                <mat-label>Effort</mat-label>
+                <mat-select formControlName="effort">
+                    <mat-option value="null">---</mat-option>
+                    <mat-option>1</mat-option>
+                    <mat-option>2</mat-option>
+                    <mat-option>3</mat-option>
+                    <mat-option>4</mat-option>
+                    <mat-option>5</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </form>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-button (click)="cancel()">Cancel</button>
+        <button mat-button cdkFocusInitial (click)="submit()">Create</button>
+    </mat-dialog-actions>
