--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
@@ -1,8 +1,17 @@
-<section class="hero is-info is-bold">
-    <div class="hero-body">
-      <p class="title">Project List</p>
-    </div>
-    <p>Project 1</p>
-    <p>Project 2</p>
-    <p>Project 3</p>
-  </section>
+<h2>Projects</h2>
+<ul class="projects">
+  <li *ngFor="let project of projects">
+    <button [class.selected]="project === selectedproject" type="button" (click)="onSelect(project)">
+      <span class="badge">{{project.id}}</span>
+      <span class="name">{{project.name}}</span>
+    </button>
+  </li>
+</ul>
+
+<div *ngIf="selectedproject">
+  <h2>{{selectedproject.name}} Details</h2>
+  <div>id: {{selectedproject.id}}</div>
+  <div>description: {{selectedproject.description}}</div>
+  <div>start date: {{selectedproject.startDate}}</div>
+  <div>end date: {{selectedproject.endDate}}</div>
+</div>
