--- a/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
+++ b/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
@@ -18,7 +18,7 @@
     Sprint
   </button>
   <div class="filters">
-    <form [formGroup]="dashboardFilters">
+    <form [formGroup]="taskboardFilters">
       <mat-form-field style="padding-right: 10px"> 
         <mat-label>Filter by sprint</mat-label>
         <mat-select formControlName="sprint">
