--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -11,7 +11,6 @@
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
-<div class="app-container" style="width:100%">
     <mat-sidenav-container>
         <!-- Left sidenav -->
         <mat-sidenav mode="side" opened class="side-nav-detail">
@@ -23,9 +22,8 @@
         </mat-sidenav>
 
         <!-- Main page content -->
-        <mat-sidenav-content style="width:100%">
+        <mat-sidenav-content>
             <router-outlet></router-outlet>
         </mat-sidenav-content>
 
     </mat-sidenav-container>
-</div>
