--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.css
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.css
@@ -1,4 +1,12 @@
 /* HeroesComponent's private CSS styles */
+:host {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
 .projects {
     margin: 0 0 2em 0;
     list-style-type: none;
