--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,22 @@
-.app-container {
-    display: flex;
-    flex-grow: 1;
-    overflow: auto;
-  }
-  
+:host {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+mat-sidenav-container {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
+mat-sidenav-content {
+  display: flex;
+  flex-direction: column;
+}
+
   .side-nav-detail {
     border-right-color: beige;
     max-width: 150px;
