--- a/you-kan.UI/ClientApp/src/app/task-board/task-board.component.css
+++ b/you-kan.UI/ClientApp/src/app/task-board/task-board.component.css
@@ -1,3 +1,11 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
 .taskboard-wrapper{
     display: flex;
     flex-grow: 1;
