--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
@@ -1,4 +1,55 @@
-<h2>Projects</h2>
+<div class="table-toolbar">
+  <button  class="new-proj-button" mat-fab extended (click)="addProject()">
+    <mat-icon>add</mat-icon>
+    Project
+  </button>
+</div>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 proj-table">
+  <!-- Project name column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Project</th>
+    <td mat-cell *matCellDef="let project">{{project.name}}</td>
+  </ng-container>
+
+  <!-- Desc column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef>Description</th>
+    <td mat-cell *matCellDef="let project">{{project.description}}</td>
+  </ng-container>
+
+  <!-- start date column -->
+  <ng-container matColumnDef="startDate">
+    <th mat-header-cell *matHeaderCellDef>Start Date</th>
+    <td mat-cell *matCellDef="let project">{{project.startDate}}</td>
+  </ng-container>
+
+  <!-- end date column -->
+  <ng-container matColumnDef="endDate">
+    <th mat-header-cell *matHeaderCellDef>End Date</th>
+    <td mat-cell *matCellDef="let project">{{project.endDate}}</td>
+  </ng-container>
+
+   <!-- Actions Column -->
+   <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button color="primary" (click)="editProject(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="deleteProject(element)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+  ></tr>
+</table>
+
+<!-- <h2>Projects</h2>
 <ul class="projects">
   <li *ngFor="let project of projects">
     <button [class.selected]="project === selectedproject" type="button" (click)="onSelect(project)">
@@ -14,4 +65,4 @@
   <div>description: {{selectedproject.description}}</div>
   <div>start date: {{selectedproject.startDate}}</div>
   <div>end date: {{selectedproject.endDate}}</div>
-</div>
+</div> -->
