--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.css
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.css
@@ -1,7 +1,17 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 100%;
-    height: 100%;
-  }
+.user-table {
+  width: 100%;
+}
+
+.mat-mdc-row .mat-mdc-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  border-color: currentColor;
+}
+
+.demo-row-is-clicked {
+  font-weight: bold;
+}
