--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
@@ -1,1 +1,62 @@
-<p>users works!</p>
+<table mat-table [dataSource]="dataSource" class="user-table">
+    <!-- ID Column -->
+    <ng-container matColumnDef="user_id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let user">{{user.user_id}}</td>
+    </ng-container>
+  
+    <!-- First Name Column -->
+    <ng-container matColumnDef="first_name">
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
+      <td mat-cell *matCellDef="let user">{{user.first_name}}</td>
+    </ng-container>
+  
+    <!-- Last Name Column -->
+    <ng-container matColumnDef="last_name">
+      <th mat-header-cell *matHeaderCellDef>Last Name</th>
+      <td mat-cell *matCellDef="let user">{{user.last_name}}</td>
+    </ng-container>
+  
+    <!-- Email Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let user">{{user.email}}</td>
+    </ng-container>
+
+    <!-- Password Column -->
+    <ng-container matColumnDef="password_hash">
+        <th mat-header-cell *matHeaderCellDef>Password</th>
+        <td mat-cell *matCellDef="let user">{{user.password_hash}}</td>
+    </ng-container>
+
+    <!-- Created Date Column -->
+    <ng-container matColumnDef="created_at">
+        <th mat-header-cell *matHeaderCellDef>Created On</th>
+        <td mat-cell *matCellDef="let user">{{user.created_at}}</td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+        mat-row
+        (click)="clickedRows.add(row)"
+        [class.demo-row-is-clicked]="clickedRows.has(row)"
+        *matRowDef="let row; columns: displayedColumns;"
+    ></tr>
+  </table>
+  
+  <div>
+    <h3>
+      Users
+    </h3>
+  </div>
+  
+  @if (!clickedRows.size) {
+    <div>Active System Users</div>
+  }
+  
+  <ul>
+    @for (clickedRow of clickedRows; track clickedRow) {
+      <li>Clicked on {{clickedRow.first_name}}</li>
+    }
+  </ul>
+  
