Implemented 'Add User' button, changed table layout, removed 'Add Sprint' button from task board.

--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
@@ -1,3 +1,4 @@
+<h3>Projects</h3>
 <div class="table-toolbar">
   <button  class="new-proj-button" mat-fab extended (click)="addProject()">
     <mat-icon>add</mat-icon>
