--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
@@ -1,6 +1,6 @@
 <h3>Users</h3>
 <div class="table-toolbar">
-    <button  class="new-user-button" mat-fab extended (click)="addUser()">
+    <button  class="new-user-button" mat-fab extended (click)="openUser()">
       <mat-icon>add</mat-icon>
       User
     </button>
