--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.html
@@ -1,6 +1,6 @@
 <h3>Projects</h3>
 <div class="table-toolbar">
-  <button  class="new-proj-button" mat-fab extended (click)="addProject()">
+  <button class="new-proj-button" mat-fab extended (click)="addProject()">
     <mat-icon>add</mat-icon>
     Project
   </button>
@@ -30,8 +30,8 @@
     <td mat-cell *matCellDef="let project">{{project.endDate}}</td>
   </ng-container>
 
-   <!-- Actions Column -->
-   <ng-container matColumnDef="actions">
+  <!-- Actions Column -->
+  <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let element">
       <button mat-icon-button color="primary" (click)="editProject(element)">
@@ -44,26 +44,9 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns;"
-  ></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<!-- <h2>Projects</h2>
-<ul class="projects">
-  <li *ngFor="let project of projects">
-    <button [class.selected]="project === selectedproject" type="button" (click)="onSelect(project)">
-      <span class="badge">{{project.id}}</span>
-      <span class="name">{{project.name}}</span>
-    </button>
-  </li>
-</ul>
-
-<div *ngIf="selectedproject">
-  <h2>{{selectedproject.name}} Details</h2>
-  <div>id: {{selectedproject.id}}</div>
-  <div>description: {{selectedproject.description}}</div>
-  <div>start date: {{selectedproject.startDate}}</div>
-  <div>end date: {{selectedproject.endDate}}</div>
-</div> -->
+<app-project-detail *ngIf="selectedProject" [@detailExpand] [project]="selectedProject" (save)="saveProject($event)"
+  (cancel)="cancelEdit()">
+</app-project-detail>
