clean up models and data types and removed unused entities

--- a/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
+++ b/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
@@ -6,7 +6,7 @@
         @for (statusList of allTasksByStatus(); track statusList.status) {
         <div cdkDropList [cdkDropListData]="statusList.tasks" (cdkDropListDropped)="onTaskDropped($event, statusList)">
             <app-column [status]="statusList.status" [tasks]="statusList.tasks">
-                @for(task of statusList.tasks; track task.name) {
+                @for(task of statusList.tasks; track task.task_title) {
                 <app-task-card cdkDrag [task]="task"></app-task-card>
                 }
             </app-column>
