--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -1,9 +1,9 @@
 <mat-card cdkDrag class="card-style" appearance="outlined">
     <mat-card-header>
-      <mat-card-title>{{ task.name }}</mat-card-title>
+      <mat-card-title>{{ task.task_title }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <p>Assignee: {{ task.assignee }}</p>
+        <p>Assignee: Test User 1, Test User 2</p>
         <p>Effort: {{ task.effort }}</p>
     </mat-card-content>
     <mat-card-actions>
