--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.css
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.css
@@ -1,26 +1,31 @@
 .project-detail-container {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0,0,0,.1);
-    padding: 20px;
-    margin-top: 20px;
+    padding: 10px;
   }
 
   mat-form-field {
     margin-bottom: 10px;
   }
 
+  .edit-title {
+    padding-top: 30px;
+    padding-left: 20px;
+  }
+
 .basic-input {
     padding-right: 10px;
 }
 
-.desc-input{
-    width: 900px;
-}
-
-.assignee-container {
-    width: 100%;
-}
-
 .actions-bar {
     padding-top: 10px;
+    align-self: flex-end;
+}
+
+.project-details {
+    display: flex;
+    flex-direction: row;
+    height: 120px;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
