--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
@@ -1,36 +1,26 @@
-<div class="project-detail-container mat-elevation-z8">
-    <h3>{{project.name}}</h3>
-    <br>
-    <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
-        <mat-form-field class="basic-input">
-            <mat-label>Name</mat-label>
-            <input matInput formControlName="name">
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Start Date</mat-label>
-            <input matInput formControlName="startDate">
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>End Date</mat-label>
-            <input matInput formControlName="endDate">
-        </mat-form-field>
-        <mat-form-field class="desc-input">
-            <mat-label>Description</mat-label>
-            <textarea matInput formControlName="description" cdkTextareaAutosize #autosize="cdkTextareaAutosize"
-                cdkAutosizeMinRows="1" cdkAutosizeMaxRows="3"></textarea>
-        </mat-form-field>
+<div class="edit-title">
+    <h4>Edit {{project.project_name}}</h4>
+</div>
+<div class="project-details">
+    <mat-card class="project-detail-container">
+        <mat-card-content>
+            <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
+                <mat-form-field class="basic-input">
+                    <mat-label>Name</mat-label>
+                    <input matInput formControlName="project_name">
+                </mat-form-field>
 
-        <div class="assignee-container">
-            <mat-form-field>
-                <mat-label>Add Assignee</mat-label>
-                <mat-select (selectionChange)="addUser($event.value)">
-                    <mat-option *ngFor="let user of availableUsers" [value]="user">
-                        {{user.first_name}} {{user.last_name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Add Assignee</mat-label>
+                    <mat-select (selectionChange)="addUser($event.value)">
+                        <mat-option *ngFor="let user of availableUsers" [value]="user">
+                            {{user.first_name}} {{user.last_name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </form>
             <mat-chip-listbox>
-                <mat-label style="width:100%">Assignees:</mat-label>
+                <mat-label>Assignees:</mat-label>
                 <mat-chip *ngFor="let user of selectedUsers" (removed)="removeUser(user)">
                     <mat-icon matChipAvatar>person</mat-icon>
                     {{user.first_name}}
@@ -39,11 +29,26 @@
                     </button>
                 </mat-chip>
             </mat-chip-listbox>
-        </div>
+        </mat-card-content>
+    </mat-card>
 
-        <div class="actions-bar">
-            <button mat-raised-button color="primary" type="submit" [disabled]="projectForm.invalid">Save</button>
-            <button mat-button type="button" (click)="onCancel()">Cancel</button>
-        </div>
-    </form>
+    <mat-card class="project-detail-container">
+        <mat-card-content>
+            <div>
+                <p style="font-size:x-large; padding-bottom: 5px">Sprints:</p>
+            </div>
+            
+            @for (sprint of project.sprints; track sprint.sprint_id) {
+            <div>
+                {{sprint.sprint_name}} : {{ sprint.start_date | date }} - {{ sprint.end_date | date }}
+            </div>
+            }
+            <button mat-button type="button" (click)="onCancel()">Add Sprint</button>
+        </mat-card-content>
+    </mat-card>
+
+    <div class="actions-bar">
+        <button mat-raised-button color="primary" type="submit" [disabled]="projectForm.invalid">Save</button>
+        <button mat-button type="button" (click)="onCancel()">Cancel</button>
+    </div>
 </div>
