--- a/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.css
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-list/project-list.component.css
@@ -20,12 +20,12 @@ th {
 }
 
 .table-toolbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 60px;
   width: 100%;
-  height: 100px;
+  padding: 20px;
+  gap: 30px;
 }
 
-.new-proj-button {
-  margin-top: 5px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-}
