--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
@@ -1,9 +1,9 @@
 <div class="edit-title">
     <h4>Edit {{project.project_name}}</h4>
 </div>
-<div class="project-details">
-    <mat-card class="project-detail-container">
-        <mat-card-content>
+<mat-card>
+    <mat-card-content class="project-details">
+        <div>
             <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
                 <mat-form-field class="basic-input">
                     <mat-label>Name</mat-label>
@@ -29,26 +29,30 @@
                     </button>
                 </mat-chip>
             </mat-chip-listbox>
-        </mat-card-content>
-    </mat-card>
+        </div>
 
-    <mat-card class="project-detail-container">
-        <mat-card-content>
+        <div>
             <div>
-                <p style="font-size:x-large; padding-bottom: 5px">Sprints:</p>
+                <p style="font-size:x-large;">Sprints:</p>
             </div>
-            
-            @for (sprint of project.sprints; track sprint.sprint_id) {
-            <div>
-                {{sprint.sprint_name}} : {{ sprint.start_date | date }} - {{ sprint.end_date | date }}
-            </div>
-            }
-            <button mat-button type="button" (click)="onCancel()">Add Sprint</button>
-        </mat-card-content>
-    </mat-card>
+            <mat-list>
+                @for (sprint of project.sprints; track sprint.sprint_id) {
+                <mat-list-item>
+                    <span matListItemTitle>
+                        {{sprint.sprint_name}} : {{ sprint.start_date | date }} - {{ sprint.end_date | date }}
+                    </span>
+                    <button mat-icon-button matListItemMeta (click)="editSprint(sprint)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </mat-list-item>
+                }
+            </mat-list>
+        </div>
 
-    <div class="actions-bar">
-        <button mat-raised-button color="primary" type="submit" [disabled]="projectForm.invalid">Save</button>
-        <button mat-button type="button" (click)="onCancel()">Cancel</button>
-    </div>
-</div>
+        <div class="actions-bar">
+            <button mat-raised-button color="primary" type="submit" [disabled]="projectForm.invalid">Save</button>
+            <button mat-button type="button" (click)="onCancel()">Cancel</button>
+        </div>
+
+    </mat-card-content>
+</mat-card>
