--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar" color="primary">
     <mat-toolbar-row>
-        <h4>YOU-KAN</h4>
+        <h4><img src="assets/images/youkanlogo.png" height="170px" width="110px"></h4>
         <div class="toolbar-actions">
             <button mat-mini-fab (click)="openUserDetail()">
                 <mat-icon>account_circle</mat-icon>
